WebSocket consumer working